v2/Assembler/Spect.Net.TestParser/Generated/Z80TestParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\dotne\source\repos\spectnetide\Assembler\AntlrZ80TestParserGenerator\AntlrZ80TestParserGenerator\Z80Test.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Spect.Net.TestParser.Generated {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class Z80TestParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, SINGLE_LINE_COMMENT=124, 
		DELIMITED_COMMENT=125, WHITESPACES=126, TESTSET=127, SOURCE=128, SP48MODE=129, 
		CALLSTUB=130, SYMBOLS=131, WITH=132, TIMEOUT=133, DI=134, EI=135, DATA=136, 
		BYTE=137, WORD=138, TEXT=139, INIT=140, SETUP=141, CALL=142, START=143, 
		STOP=144, HALT=145, CLEANUP=146, TEST=147, CATEGORY=148, PARAMS=149, CASE=150, 
		ARRANGE=151, ACT=152, ASSERT=153, PORTMOCK=154, BREAKPOINT=155, DECNUM=156, 
		HEXNUM=157, BINNUM=158, CHAR=159, STRING=160, IDENTIFIER=161, IDSTART=162, 
		IDCONT=163, ErrorCharacter=164;
	public const int
		RULE_compileUnit = 0, RULE_testSet = 1, RULE_sp48Mode = 2, RULE_sourceContext = 3, 
		RULE_callstub = 4, RULE_testOptions = 5, RULE_testOption = 6, RULE_dataBlock = 7, 
		RULE_dataBlockBody = 8, RULE_valueDef = 9, RULE_memPattern = 10, RULE_memPatternBody = 11, 
		RULE_byteSet = 12, RULE_wordSet = 13, RULE_text = 14, RULE_portMock = 15, 
		RULE_portPulse = 16, RULE_initSettings = 17, RULE_setupCode = 18, RULE_cleanupCode = 19, 
		RULE_invokeCode = 20, RULE_testBlock = 21, RULE_testParams = 22, RULE_testCase = 23, 
		RULE_arrange = 24, RULE_assignment = 25, RULE_regAssignment = 26, RULE_flagStatus = 27, 
		RULE_memAssignment = 28, RULE_act = 29, RULE_breakpoint = 30, RULE_assert = 31, 
		RULE_reg8 = 32, RULE_reg8Idx = 33, RULE_reg8Spec = 34, RULE_reg16 = 35, 
		RULE_reg16Idx = 36, RULE_reg16Spec = 37, RULE_flag = 38, RULE_expr = 39, 
		RULE_orExpr = 40, RULE_xorExpr = 41, RULE_andExpr = 42, RULE_equExpr = 43, 
		RULE_relExpr = 44, RULE_shiftExpr = 45, RULE_addExpr = 46, RULE_multExpr = 47, 
		RULE_unaryExpr = 48, RULE_literalExpr = 49, RULE_symbolExpr = 50, RULE_registerSpec = 51, 
		RULE_addrSpec = 52, RULE_reachSpec = 53, RULE_memReadSpec = 54, RULE_memWriteSpec = 55;
	public static readonly string[] ruleNames = {
		"compileUnit", "testSet", "sp48Mode", "sourceContext", "callstub", "testOptions", 
		"testOption", "dataBlock", "dataBlockBody", "valueDef", "memPattern", 
		"memPatternBody", "byteSet", "wordSet", "text", "portMock", "portPulse", 
		"initSettings", "setupCode", "cleanupCode", "invokeCode", "testBlock", 
		"testParams", "testCase", "arrange", "assignment", "regAssignment", "flagStatus", 
		"memAssignment", "act", "breakpoint", "assert", "reg8", "reg8Idx", "reg8Spec", 
		"reg16", "reg16Idx", "reg16Spec", "flag", "expr", "orExpr", "xorExpr", 
		"andExpr", "equExpr", "relExpr", "shiftExpr", "addExpr", "multExpr", "unaryExpr", 
		"literalExpr", "symbolExpr", "registerSpec", "addrSpec", "reachSpec", 
		"memReadSpec", "memWriteSpec"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "';'", "','", "':'", "'<'", "'>'", "'..'", "'['", 
		"']'", "'a'", "'A'", "'b'", "'B'", "'c'", "'C'", "'d'", "'D'", "'e'", 
		"'E'", "'h'", "'H'", "'l'", "'L'", "'xl'", "'XL'", "'xh'", "'XH'", "'yl'", 
		"'YL'", "'yh'", "'YH'", "'ixl'", "'IXL'", "'IXl'", "'ixh'", "'IXH'", "'IXh'", 
		"'iyl'", "'IYL'", "'IYl'", "'iyh'", "'IYH'", "'IYh'", "'i'", "'I'", "'r'", 
		"'R'", "'bc'", "'BC'", "'de'", "'DE'", "'hl'", "'HL'", "'sp'", "'SP'", 
		"'ix'", "'IX'", "'iy'", "'IY'", "'af''", "'AF''", "'bc''", "'BC''", "'de''", 
		"'DE''", "'hl''", "'HL''", "'.z'", "'.Z'", "'.nz'", "'.NZ'", "'.c'", "'.C'", 
		"'.nc'", "'.NC'", "'.pe'", "'.PE'", "'.po'", "'.PO'", "'.p'", "'.P'", 
		"'.m'", "'.M'", "'.n'", "'.N'", "'.a'", "'.A'", "'.h'", "'.H'", "'.nh'", 
		"'.NH'", "'.3'", "'.n3'", "'.N3'", "'.5'", "'.n5'", "'.N5'", "'?'", "'|'", 
		"'^'", "'&'", "'=='", "'!='", "'<='", "'>='", "'<<'", "'>>'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'~'", "'!'", "'('", "')'", "'<.'", "'.>'", "'<|'", 
		"'|>'", "'<||'", "'||>'", null, null, null, "'testset'", "'source'", "'sp48mode'", 
		"'callstub'", "'symbols'", "'with'", "'timeout'", "'di'", "'ei'", "'data'", 
		"'byte'", "'word'", "'text'", "'init'", "'setup'", "'call'", "'start'", 
		"'stop'", "'halt'", "'cleanup'", "'test'", "'category'", "'params'", "'case'", 
		"'arrange'", "'act'", "'assert'", "'portmock'", "'breakpoint'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "WHITESPACES", 
		"TESTSET", "SOURCE", "SP48MODE", "CALLSTUB", "SYMBOLS", "WITH", "TIMEOUT", 
		"DI", "EI", "DATA", "BYTE", "WORD", "TEXT", "INIT", "SETUP", "CALL", "START", 
		"STOP", "HALT", "CLEANUP", "TEST", "CATEGORY", "PARAMS", "CASE", "ARRANGE", 
		"ACT", "ASSERT", "PORTMOCK", "BREAKPOINT", "DECNUM", "HEXNUM", "BINNUM", 
		"CHAR", "STRING", "IDENTIFIER", "IDSTART", "IDCONT", "ErrorCharacter"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Z80Test.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public Z80TestParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(Z80TestParser.Eof, 0); }
		public TestSetContext[] testSet() {
			return GetRuleContexts<TestSetContext>();
		}
		public TestSetContext testSet(int i) {
			return GetRuleContext<TestSetContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==TESTSET) {
				{
				{
				State = 112; testSet();
				}
				}
				State = 117;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 118; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TestSetContext : ParserRuleContext {
		public ITerminalNode TESTSET() { return GetToken(Z80TestParser.TESTSET, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(Z80TestParser.IDENTIFIER, 0); }
		public SourceContextContext sourceContext() {
			return GetRuleContext<SourceContextContext>(0);
		}
		public Sp48ModeContext sp48Mode() {
			return GetRuleContext<Sp48ModeContext>(0);
		}
		public CallstubContext callstub() {
			return GetRuleContext<CallstubContext>(0);
		}
		public DataBlockContext dataBlock() {
			return GetRuleContext<DataBlockContext>(0);
		}
		public InitSettingsContext initSettings() {
			return GetRuleContext<InitSettingsContext>(0);
		}
		public TestBlockContext[] testBlock() {
			return GetRuleContexts<TestBlockContext>();
		}
		public TestBlockContext testBlock(int i) {
			return GetRuleContext<TestBlockContext>(i);
		}
		public TestSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_testSet; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterTestSet(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitTestSet(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTestSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TestSetContext testSet() {
		TestSetContext _localctx = new TestSetContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_testSet);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(TESTSET);
			State = 121; Match(IDENTIFIER);
			State = 122; Match(T__0);
			State = 124;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==SP48MODE) {
				{
				State = 123; sp48Mode();
				}
			}

			State = 126; sourceContext();
			State = 128;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==CALLSTUB) {
				{
				State = 127; callstub();
				}
			}

			State = 131;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==DATA) {
				{
				State = 130; dataBlock();
				}
			}

			State = 134;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==INIT) {
				{
				State = 133; initSettings();
				}
			}

			State = 139;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==TEST) {
				{
				{
				State = 136; testBlock();
				}
				}
				State = 141;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 142; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sp48ModeContext : ParserRuleContext {
		public ITerminalNode SP48MODE() { return GetToken(Z80TestParser.SP48MODE, 0); }
		public Sp48ModeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sp48Mode; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterSp48Mode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitSp48Mode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSp48Mode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Sp48ModeContext sp48Mode() {
		Sp48ModeContext _localctx = new Sp48ModeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_sp48Mode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(SP48MODE);
			State = 145; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SourceContextContext : ParserRuleContext {
		public ITerminalNode SOURCE() { return GetToken(Z80TestParser.SOURCE, 0); }
		public ITerminalNode STRING() { return GetToken(Z80TestParser.STRING, 0); }
		public ITerminalNode SYMBOLS() { return GetToken(Z80TestParser.SYMBOLS, 0); }
		public ITerminalNode[] IDENTIFIER() { return GetTokens(Z80TestParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(Z80TestParser.IDENTIFIER, i);
		}
		public SourceContextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sourceContext; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterSourceContext(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitSourceContext(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSourceContext(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SourceContextContext sourceContext() {
		SourceContextContext _localctx = new SourceContextContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_sourceContext);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(SOURCE);
			State = 148; Match(STRING);
			State = 155;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==SYMBOLS) {
				{
				State = 149; Match(SYMBOLS);
				State = 151;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 150; Match(IDENTIFIER);
					}
					}
					State = 153;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==IDENTIFIER );
				}
			}

			State = 157; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CallstubContext : ParserRuleContext {
		public ITerminalNode CALLSTUB() { return GetToken(Z80TestParser.CALLSTUB, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CallstubContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_callstub; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterCallstub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitCallstub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallstub(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CallstubContext callstub() {
		CallstubContext _localctx = new CallstubContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_callstub);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 159; Match(CALLSTUB);
			State = 160; expr();
			State = 161; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TestOptionsContext : ParserRuleContext {
		public ITerminalNode WITH() { return GetToken(Z80TestParser.WITH, 0); }
		public TestOptionContext[] testOption() {
			return GetRuleContexts<TestOptionContext>();
		}
		public TestOptionContext testOption(int i) {
			return GetRuleContext<TestOptionContext>(i);
		}
		public TestOptionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_testOptions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterTestOptions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitTestOptions(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTestOptions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TestOptionsContext testOptions() {
		TestOptionsContext _localctx = new TestOptionsContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_testOptions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163; Match(WITH);
			State = 164; testOption();
			State = 169;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__3) {
				{
				{
				State = 165; Match(T__3);
				State = 166; testOption();
				}
				}
				State = 171;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 172; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TestOptionContext : ParserRuleContext {
		public ITerminalNode TIMEOUT() { return GetToken(Z80TestParser.TIMEOUT, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode DI() { return GetToken(Z80TestParser.DI, 0); }
		public ITerminalNode EI() { return GetToken(Z80TestParser.EI, 0); }
		public TestOptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_testOption; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterTestOption(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitTestOption(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTestOption(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TestOptionContext testOption() {
		TestOptionContext _localctx = new TestOptionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_testOption);
		try {
			State = 178;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case TIMEOUT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 174; Match(TIMEOUT);
				State = 175; expr();
				}
				break;
			case DI:
				EnterOuterAlt(_localctx, 2);
				{
				State = 176; Match(DI);
				}
				break;
			case EI:
				EnterOuterAlt(_localctx, 3);
				{
				State = 177; Match(EI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DataBlockContext : ParserRuleContext {
		public ITerminalNode DATA() { return GetToken(Z80TestParser.DATA, 0); }
		public DataBlockBodyContext[] dataBlockBody() {
			return GetRuleContexts<DataBlockBodyContext>();
		}
		public DataBlockBodyContext dataBlockBody(int i) {
			return GetRuleContext<DataBlockBodyContext>(i);
		}
		public DataBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dataBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.EnterDataBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80TestListener typedListener = listener as IZ80TestListener;
			if (typedListener != null) typedListener.ExitDataBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80TestVisitor<TResult> typedVisitor = visitor as IZ80TestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDataBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DataBlockContext dataBlock() {
		DataBlockContext _localctx = new DataBlockContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_dataBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 180; Match(DATA);
			State = 181; Match(T__0);
			State = 185;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 182; dataBlockBody();
				}
				}
				State = 187;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 188; Match(T__1);
			State = 190;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__2) {
				{
				State = 189; Match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
